Added support for pay events in shop.

--- a/src/Club/EventBundle/Resources/views/AdminEvent/form.html.twig
+++ b/src/Club/EventBundle/Resources/views/AdminEvent/form.html.twig
@@ -5,6 +5,7 @@
         {{ form_row(form.event_name) }}
         {{ form_row(form.description) }}
         {{ form_row(form.max_attends) }}
+        {{ form_row(form.price) }}
         {{ form_row(form.start_date) }}
         {{ form_row(form.stop_date) }}
         {{ form_row(form.last_subscribe) }}
