--- a/src/Club/LayoutBundle/Resources/public/css/mystyle.css
+++ b/src/Club/LayoutBundle/Resources/public/css/mystyle.css
@@ -1,4 +1,3 @@
-/* WRITE YOUR CSS CODE HERE */
 table.table th.action {
     width: 120px;
 }
@@ -55,3 +54,15 @@ table.style td a { color: #000; }
 span.label a { color: #fff; }
 
 div.socialButtons div { float: left }
+
+div.calendar-header {
+    background-color: #969696;
+    color: #ffffff;
+    text-align: center;
+    width: 80px;
+    padding-top: 5px;
+}
+
+div.calendar-header span.date {
+    font-size: 200%;
+}
