--- a/src/Club/ShopBundle/Resources/views/Checkout/signin.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Checkout/signin.html.twig
@@ -13,19 +13,7 @@
         <legend>{% trans %}Existing member{% endtrans %}</legend>
         <p>{% trans %}If you already have an account, please signin here.{% endtrans %}</p>
 
-        <div class="control-group">
-            <label class="control-label" for="_username">{% trans %}Username{% endtrans %}</label>
-            <div class="controls">
-                <input type="text" id="_username" name="_username" placeholder="{% trans %}Username{% endtrans %}">
-            </div>
-        </div>
-        <div class="control-group">
-            <label class="control-label" for="_password">{% trans %}Password{% endtrans %}</label>
-            <div class="controls">
-                <input type="password" id="_password" name="_password" placeholder="{% trans %}Password{% endtrans %}">
-                <input type="submit" value="{% trans %}Login{% endtrans %}" class="btn btn-primary" />
-            </div>
-        </div>
+        {% include "ClubUserBundle:Auth:login_form.html.twig" %}
     </form>
 </div>
 
