Updated design for reset password.

--- a/src/Club/UserBundle/Resources/views/Auth/resetPassword.html.twig
+++ b/src/Club/UserBundle/Resources/views/Auth/resetPassword.html.twig
@@ -1,22 +1,19 @@
 {% extends "ClubLayoutBundle:Default:base.html.twig" %}
 
 {% block body %}
-        <div id="login-box">
 
-                {% include "ClubLayoutBundle:Default:flash.html.twig" %}
-                {% include "ClubLayoutBundle:Default:flash_info.html.twig" with {'msg':'Enter your new password below.'|trans} %}
+{% include "ClubLayoutBundle:Default:flash.html.twig" %}
+{% include "ClubLayoutBundle:Default:flash_info.html.twig" with {'msg':'Enter your new password below.'|trans} %}
 
-                <!-- Form -->
-                <form method="POST" action="{{ path('auth_reset', {'hash':forgot.hash}) }}">
-                {{ form_widget(form) }}
-                <table class="nom nostyle">
-                        <tr>
-                                <td colspan="2" class="t-right"><input type="submit" class="input-submit" value="Sign In &raquo;" /></td>
-                        </tr>
-                </table>
-                </form>
+<form method="POST" action="{{ path('auth_reset', {'hash':forgot.hash}) }}" class="horizontal">
 
-        </div> <!-- /login-box -->
+    {{ form_widget(form) }}
+    <div class="control-group">
+        <div class="controls">
+            <button type="submit" class="btn btn-primary">{% trans %}Set password{% endtrans %}</button>
+        </div>
+    </div>
 
-        <div id="login-bottom"></div>
+</form>
+
 {% endblock %}
