Fixed migration stuff.

--- a/src/Club/UserBundle/Resources/views/Auth/login_form.html.twig
+++ b/src/Club/UserBundle/Resources/views/Auth/login_form.html.twig
@@ -9,7 +9,7 @@
             <label class="control-label" for="_password">{% trans %}Password{% endtrans %}</label>
             <div class="controls">
                 <input type="password" id="_password" name="_password" placeholder="{% trans %}Password{% endtrans %}">
-                <input type="submit" value="{% trans %}Login{% endtrans %}" class="btn btn-primary" />
+                <input type="submit" value="{% trans %}Sign In{% endtrans %}" class="btn btn-primary" />
             </div>
         </div>
 
