--- a/src/Club/BookingBundle/Resources/views/Booking/information.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Booking/information.html.twig
@@ -1,26 +1,37 @@
-<fieldset>
-  <legend>{% trans %}Booking Information{% endtrans %}</legend>
-  <div class="list">
-    <p><label>{% trans %}Location{% endtrans %}</label>{{ booking.field.location.locationName }}</p>
-    <p><label>{% trans %}Date{% endtrans %}</label>{{ booking.firstDate|club_date }}</p>
-    <p><label>{% trans %}Time{% endtrans %}</label>{{ booking.firstDate|club_time }} - {{ booking.endDate|club_time }}</p>
-    <p><label>{% trans %}Field{% endtrans %}</label>{{ booking.field.name }}</p>
+<div class="well">
+    <h3>{% trans %}Booking Information{% endtrans %}</h3>
+    <dl class="dl-horizontal">
+        <dt>{% trans %}Location{% endtrans %}</dt>
+        <dd>{{ booking.field.location.locationName }}</dd>
 
-    <p><label>{% trans %}Booker{% endtrans %}</label><a href="{{ path('club_user_member_show', {'id':booking.user.id}) }}">{{ booking.user.name }} ({{ booking.user.memberNumber }})</a></p>
-    {% if booking.guest %}
-    <p><label>{% trans %}Partner{% endtrans %}</label>{% trans %}Guest{% endtrans %}</p>
-    {% else %}
-    <p><label>{% trans %}Partner{% endtrans %}</label>
-    {% for partner in booking.users %}
-      <a href="{{ path('club_user_member_show', {'id':partner.id}) }}">{{ partner.name }} ({{ partner.memberNumber }})</a>
-    {% endfor %}
-    </p>
-    {% endif %}
+        <dt>{% trans %}Date{% endtrans %}</dt>
+        <dd>{{ booking.firstDate|club_date }}</dd>
+
+        <dt>{% trans %}Time{% endtrans %}</dt>
+        <dd>{{ booking.firstDate|club_time }} - {{ booking.endDate|club_time }}</dd>
+
+        <dt>{% trans %}Field{% endtrans %}</dt>
+        <dd>{{ booking.field.name }}</dd>
+    </dl>
+
+    <h3>{% trans %}Players{% endtrans %}</h3>
+    <dl class="dl-horizontal">
+        <dt>{% trans %}Booker{% endtrans %}</dt>
+        <dd><a href="{{ path('club_user_member_show', {'id':booking.user.id}) }}">{{ booking.user.name }} ({{ booking.user.memberNumber }})</a></dd>
+
+        <dt>{% trans %}Partner{% endtrans %}</dt>
+        {% if booking.guest %}
+        <dd>{% trans %}Guest{% endtrans %}</dd>
+        {% else %}
+        {% for partner in booking.users %}
+        <dd><a href="{{ path('club_user_member_show', {'id':partner.id}) }}">{{ partner.name }} ({{ partner.memberNumber }})</a></dd>
+        {% endfor %}
+        {% endif %}
+    </dl>
 
     {% if booking.field.information %}
-      <h3>{% trans %}Information{% endtrans %}</h3>
-      <p>{{ booking.field.information }}</p>
+    <h3>{% trans %}Information{% endtrans %}</h3>
+    <p>{{ booking.field.information }}</p>
     {% endif %}
-  </div>
-</fieldset>
+</div>
 
