--- a/src/Club/BookingBundle/Resources/views/Overview/book_form.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Overview/book_form.html.twig
@@ -1,14 +1,24 @@
-<h2>{% trans %}Booking{% endtrans %}</h2>
-  <form method="post" action="{{ path('club_booking_booking_review', {'interval_id':interval.id, 'date':date|date('Y-m-d')}) }}" class="form-horizontal">
-    <p>{% trans %}Find your partner and complete your booking.{% endtrans %}</p>
-    {{ form_widget(form) }}
-    {% include "ClubLayoutBundle:Default:submit_button.html.twig" %}
-  </form>
+<div class="row-fluid">
+    <div class="span6">
+        <div class="well">
+        <h3>{% trans %}Booking{% endtrans %}</h3>
+        <form method="post" action="{{ path('club_booking_booking_review', {'interval_id':interval.id, 'date':date|date('Y-m-d')}) }}">
+        <p>{% trans %}Find your partner and complete your booking.{% endtrans %}</p>
+        {{ form_widget(form) }}
+        {% include "ClubLayoutBundle:Default:submit_button.html.twig" %}
+        </form>
+        </div>
+    </div>
 
-<h2>{% trans %}Guest booking{% endtrans %}</h2>
-  <form method="post" action="{{ path('club_booking_booking_review', {'interval_id':interval.id, 'date':date|date('Y-m-d')}) }}" class="form-horizontal">
-    <p>{% trans %}Click here if you want to book with a guest.{% endtrans %}</p>
-    <input type="hidden" name="guest" value="1" />
-    {% include "ClubLayoutBundle:Default:submit_button.html.twig" %}
-  </form>
+    <div class="span6">
+        <div class="well">
+        <h3>{% trans %}Guest booking{% endtrans %}</h3>
+        <form method="post" action="{{ path('club_booking_booking_review', {'interval_id':interval.id, 'date':date|date('Y-m-d')}) }}">
+        <p>{% trans %}Click here if you want to book with a guest.{% endtrans %}</p>
+        <input type="hidden" name="guest" value="1" />
+        {% include "ClubLayoutBundle:Default:submit_button.html.twig" %}
+        </form>
+        </div>
+    </div>
+</div>
 
