--- a/src/Club/BookingBundle/Resources/views/Overview/book_plan_form.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Overview/book_plan_form.html.twig
@@ -1,8 +1,12 @@
-<h2>{% trans %}Booking plan{% endtrans %}</h2>
-<form method="get" action="{{ path('club_booking_plan_pre', {'date':date|date('Y-m-d'),'interval_id':interval.id}) }}" class="form-horizontal">
-
-<p>{% trans %}Click here if you want to create a booking plan.{% endtrans %}</p>
-{% include "ClubLayoutBundle:Default:submit_button.html.twig" %}
-
-</form>
+<div class="row-fluid">
+    <div class="span6">
+        <div class="well">
+            <h3>{% trans %}Booking plan{% endtrans %}</h3>
+            <form method="get" action="{{ path('club_booking_plan_pre', {'date':date|date('Y-m-d'),'interval_id':interval.id}) }}">
+            <p>{% trans %}Click here if you want to create a booking plan.{% endtrans %}</p>
+            {% include "ClubLayoutBundle:Default:submit_button.html.twig" %}
+            </form>
+        </div>
+    </div>
+</div>
 
