--- a/src/Club/InstallerBundle/Resources/views/base.html.twig
+++ b/src/Club/InstallerBundle/Resources/views/base.html.twig
@@ -8,10 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="{{ asset('jquery-ui/css/ui-lightness/jquery-ui-1.10.2.custom.min.css') }}" />
-    {% stylesheets
-        "@ClubLayoutBundle/Resources/public/bootstrap/css/bootstrap.min.css"
-        "@ClubLayoutBundle/Resources/public/bootstrap/css/bootstrap-responsive.min.css"
-        "@ClubLayoutBundle/Resources/public/css/mystyle.css" %}
+    <link rel="stylesheet" href="{{ asset('bootstrap/css/bootstrap.min.css') }}" />
+    <link rel="stylesheet" href="{{ asset('bootstrap/css/bootstrap-responsive.min.css') }}" />
+    {% stylesheets "@ClubLayoutBundle/Resources/public/css/*" %}
     <link rel="stylesheet" href="{{ asset_url }}" />
     {% endstylesheets %}
     <style type="text/css">
@@ -31,9 +30,8 @@
 
     <script type="text/javascript" src="{{ asset('jquery-ui/js/jquery-1.9.1.js') }}"></script>
     <script type="text/javascript" src="{{ asset('jquery-ui/js/jquery-ui-1.10.2.custom.min.js') }}"></script>
-    {% javascripts
-        "@ClubLayoutBundle/Resources/public/js/*"
-        "@ClubLayoutBundle/Resources/public/bootstrap/js/bootstrap.min.js" %}
+    <script type="text/javascript" src="{{ asset('bootstrap/js/bootstrap.min.js') }}"></script>
+    {% javascripts "@ClubLayoutBundle/Resources/public/js/*" %}
     <script type="text/javascript" src="{{ asset_url }}"></script>
     {% endjavascripts %}
 
