Make use of club_extra.paginator., and Changed sessions directory.

--- a/src/Club/MatchBundle/Resources/views/Match/index.html.twig
+++ b/src/Club/MatchBundle/Resources/views/Match/index.html.twig
@@ -12,8 +12,8 @@
 </div>
 {% endif %}
 
-{% include "ClubPaginatorBundle:Paginator:paginator.html.twig" %}
+{{ club_paginator() }}
 {% include "ClubMatchBundle:Match:recent_matches.html.twig" %}
-{% include "ClubPaginatorBundle:Paginator:paginator.html.twig" %}
+{{ club_paginator() }}
 
 {% endblock %}
