--- a/src/Club/MessageBundle/Resources/views/AdminMessage/archive.html.twig
+++ b/src/Club/MessageBundle/Resources/views/AdminMessage/archive.html.twig
@@ -51,6 +51,6 @@
   </tbody>
 </table>
 
-{% include "ClubPaginatorBundle:Paginator:paginator.html.twig" %}
+{{ club_paginator() }}
 
 {% endblock %}
