--- a/src/Club/UserBundle/Resources/views/AdminGroup/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminGroup/index.html.twig
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block body %}
-{% include "ClubPaginatorBundle:Paginator:paginator.html.twig" %}
+{{ club_paginator() }}
 
 <table class="table">
   <thead>
