--- a/src/Club/CheckinBundle/Resources/views/AdminCheckin/index.html.twig
+++ b/src/Club/CheckinBundle/Resources/views/AdminCheckin/index.html.twig
@@ -1,7 +1,7 @@
 {% extends "ClubCheckinBundle::base.html.twig" %}
 
 {% block body %}
-{% include "ClubPaginatorBundle:Paginator:paginator.html.twig" %}
+{{ club_paginator() }}
 
 <table class="table">
   <thead>
