--- a/src/Club/WelcomeBundle/Resources/views/Blog/show.html.twig
+++ b/src/Club/WelcomeBundle/Resources/views/Blog/show.html.twig
@@ -4,30 +4,6 @@
 Blog: {{ blog.title }}
 {% endblock %}
 
-{% if facebook_like %}
-
-{% block metatags %}
-<meta property="og:title" content="Blog: {{ blog.title }}"/>
-<meta property="og:type" content="blog" />
-<meta property="og:url" content="{{ url('club_welcome_blog_show', {'blog_id':blog.id}) }}" />
-<meta property="og:site_name" content="{{ url('homepage') }}" />
-<meta property="fb:app_id" content="{{ facebook_api }}" />
-<meta property="og:image" content="{{ url('homepage') }}{{ asset('bundles/clublayout/images/icons/32x32/transmit.png') }}" />
-{% endblock %}
-
-{% block after_body %}
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_GB/all.js#xfbml=1&appId={{ facebook_api }}";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
-{% endblock %}
-
-{% endif %}
-
 {% block header %}
 <div class="page-header"><h1><img src="{{ asset('bundles/clublayout/images/icons/32x32/transmit.png') }}" /> {% trans with {'%title%':blog.title} %}Blog, %title%{% endtrans %}</h1></div>
 {% endblock %}
@@ -44,17 +20,7 @@ Blog: {{ blog.title }}
 
 <h6>{% trans with {'%date%':blog.createdAt|club_datetime,'%author%':blog.user.name} %}Posted on %date% by %author%.{% endtrans %}</h6>
 
-<div class="socialButtons">
-{% if google_plus %}
-<div>{% include "ClubLayoutBundle:Default:google_plus.html.twig" %}</div>
-{% endif %}
-
-{% if facebook_like %}
-<div>{% include "ClubLayoutBundle:Default:facebook_like.html.twig" %}</div>
-{% endif %}
-</div>
-
-<div class="clearfix"></div>
+{{ socialButtons() }}
 
 <h4>{% trans %}Comments{% endtrans %}</h4>
 {% for comment in blog.comments %}
