--- a/src/Club/ShopBundle/Resources/views/AdminPaymentMethod/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminPaymentMethod/index.html.twig
@@ -1,6 +1,8 @@
 {% extends "ClubShopBundle::base.html.twig" %}
 
 {% block body %}
+<p>Enable and disable of payment methods is done in the clubmaster.yml file.</p>
+
 <table class="table">
   <thead>
     <tr>
