You can see how has bought a product.

--- a/src/Club/ShopBundle/Resources/views/AdminProduct/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminProduct/index.html.twig
@@ -28,6 +28,7 @@
         {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('admin_shop_product_edit', { 'id':product.id })} %}
         {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('admin_shop_product_delete', { 'id':product.id })} %}
         {% include "ClubLayoutBundle:Default:attribute_link.html.twig" with {'url':path('admin_shop_product_attribute', {'id':product.id})} %}
+        {% include "ClubLayoutBundle:Default:attends_link.html.twig" with {'url':path('admin_shop_product_users', {'id':product.id})} %}
       </td>
     </tr>
   {% else %}
