--- a/app/Resources/TwigBundle/views/Exception/error.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error.html.twig
@@ -7,9 +7,7 @@
     <meta name="author" content="Michael Holm">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="{{ asset('bundles/clublayout/bootstrap/css/bootstrap.min.css') }}" />
-    <link rel="stylesheet" href="{{ asset('bundles/clublayout/bootstrap/css/bootstrap-responsive.min.css') }}" />
-    <link rel="stylesheet" href="{{ asset('bundles/clublayout/css/mystyle.css') }}" />
+    <link rel="stylesheet" href="{{ asset('bootstrap/css/bootstrap.min.css') }}" />
     <style type="text/css">
       body {
         padding-top: 60px;
@@ -24,8 +22,6 @@
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-
-    <script type="text/javascript" src="{{ asset('bundles/clublayout/bootstrap/js/bootstrap.min.js') }}"></script>
 
     <link rel="shortcut icon" href="{{ asset('favicon.ico') }}" />
 
