Fixed issue with blue arrow.

--- a/src/Club/InstallerBundle/Resources/public/css/install.css
+++ b/src/Club/InstallerBundle/Resources/public/css/install.css
@@ -65,7 +65,7 @@ p {
 }
 
 ul a {
-    background: url(../images/blue-arrow.png) no-repeat right 6px;
+    background: url(../bundles/clubinstaller/images/blue-arrow.png) no-repeat right 6px;
     padding-right: 10px;
 }
 
